--- a/app/src/main/res/layout/wizard_fragment_compartir.xml
+++ b/app/src/main/res/layout/wizard_fragment_compartir.xml
@@ -69,6 +69,8 @@
         android:textStyle="bold" />
 
     <EditText
+        android:maxLines="1"
+        android:lines="1"
         android:id="@+id/nombre_completo"
         android:textStyle="bold"
         android:textSize="24sp"
@@ -82,6 +84,8 @@
         android:layout_height="wrap_content" />
 
     <TextView
+        android:maxLines="1"
+        android:lines="1"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
