--- a/app/src/main/res/layout/wizard_fragment_compartir.xml
+++ b/app/src/main/res/layout/wizard_fragment_compartir.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0099cc"
+    android:background="#2196F3"
     android:orientation="vertical"
     tools:context="mx.com.cesarcorona.proyeccciondegastos.activities.MainWizardActivity">
 
@@ -26,7 +26,7 @@
         android:padding="14dp"
         android:keepScreenOn="true"
         android:text="¿Desea recibir la proyección por correo electronico?"
-        android:textColor="#55d5f5"
+        android:textColor="#FFF"
         android:textSize="16sp"
         android:textStyle="bold" />
 
@@ -64,7 +64,7 @@
         android:padding="14dp"
         android:keepScreenOn="true"
         android:text="Nombre completo"
-        android:textColor="#55d5f5"
+        android:textColor="#2196F3"
         android:textSize="16sp"
         android:textStyle="bold" />
 
@@ -94,7 +94,7 @@
         android:padding="14dp"
         android:keepScreenOn="true"
         android:text="Correo electronico"
-        android:textColor="#55d5f5"
+        android:textColor="#FFF"
         android:textSize="16sp"
         android:textStyle="bold" />
 
