--- a/app/src/main/res/layout/wizard_fragment_final.xml
+++ b/app/src/main/res/layout/wizard_fragment_final.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0099cc"
+    android:background="#2196F3"
     android:orientation="vertical"
     tools:context="mx.com.cesarcorona.proyeccciondegastos.activities.MainWizardActivity">
 
@@ -13,12 +13,13 @@
         android:layout_height="30dp">
 
         <TextView
+            android:textColor="#FFF"
             android:textStyle="bold"
             android:paddingLeft="10dp"
             android:paddingTop="5dp"
             android:gravity="center"
             android:background="@color/colorAccent"
-            android:text="Gracias por usar esta herrmienta"
+            android:text="Gracias por usar esta herramienta"
             android:layout_weight="7"
             android:layout_width="0dp"
             android:layout_height="match_parent" />
@@ -45,6 +46,7 @@
             android:paddingLeft="10dp"
             android:paddingTop="5dp"
             android:gravity="center"
+            android:textColor="#FFF"
             android:background="@color/colorAccent"
             android:text="Algun comentario o consejo"
             android:layout_weight="7"
@@ -75,6 +77,7 @@
         <TextView
             android:textStyle="bold"
             android:paddingLeft="5dp"
+            android:textColor="#FFF"
             android:paddingTop="5dp"
             android:gravity="center|start"
             android:background="@color/colorAccent"
@@ -101,6 +104,7 @@
 
 
                 <TextView
+                    android:textColor="#FFF"
                     android:textStyle="bold"
                     android:gravity="center"
                     android:text="Nueva Proyeccion"
@@ -116,6 +120,7 @@
                 android:layout_height="0dp">
 
                 <TextView
+                    android:textColor="#FFF"
                     android:textStyle="bold"
                     android:gravity="center"
                     android:text="Salir"
@@ -139,7 +144,7 @@
         android:padding="5dp"
         android:keepScreenOn="true"
         android:text="www.janem.com.mx"
-        android:textColor="#55d5f5"
+        android:textColor="#FFF"
         android:textSize="14sp"
         android:textStyle="bold" />
     <TextView
@@ -151,7 +156,7 @@
         android:padding="5dp"
         android:keepScreenOn="true"
         android:text="consulta@janem.com.mx"
-        android:textColor="#55d5f5"
+        android:textColor="#FFF"
         android:textSize="14sp"
         android:textStyle="bold" />
 
