--- a/app/src/main/res/layout/wizard_fragment_proyeccion.xml
+++ b/app/src/main/res/layout/wizard_fragment_proyeccion.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0099cc"
+    android:background="#2196F3"
     android:orientation="vertical"
     tools:context="mx.com.cesarcorona.proyeccciondegastos.activities.MainWizardActivity">
 
@@ -19,6 +19,7 @@
             android:gravity="center|start"
             android:background="@color/colorAccent"
             android:text="Proyección"
+            android:textColor="#FFF"
             android:layout_weight="7"
             android:layout_width="0dp"
             android:layout_height="match_parent" />
@@ -27,6 +28,7 @@
             android:textStyle="bold"
             android:paddingLeft="10dp"
             android:paddingTop="5dp"
+            android:textColor="#FFF"
             android:gravity="center"
             android:text="11/08/2018"
             android:background="@color/colorPrimaryDark"
@@ -54,6 +56,7 @@
             android:textStyle="bold"
             android:paddingLeft="10dp"
             android:paddingTop="5dp"
+            android:textColor="#FFF"
             android:gravity="center"
             android:text="Cifras en pesos"
             android:background="@color/colorAccent"
