--- a/app/src/main/res/layout/wizard_fragment_final.xml
+++ b/app/src/main/res/layout/wizard_fragment_final.xml
@@ -61,6 +61,7 @@
         android:textSize="16sp"
         android:gravity="center"
         android:hint="Comentario"
+        android:maxLines="10"
         android:layout_marginTop="10dp"
         android:layout_marginRight="30dp"
         android:layout_marginLeft="30dp"
