--- a/app/src/main/res/layout/wizard_fragment_compartir.xml
+++ b/app/src/main/res/layout/wizard_fragment_compartir.xml
@@ -64,7 +64,7 @@
         android:padding="14dp"
         android:keepScreenOn="true"
         android:text="Nombre completo"
-        android:textColor="#2196F3"
+        android:textColor="#FFF"
         android:textSize="16sp"
         android:textStyle="bold" />
 
@@ -73,10 +73,11 @@
         android:lines="1"
         android:id="@+id/nombre_completo"
         android:textStyle="bold"
-        android:textSize="24sp"
+        android:textSize="18sp"
         android:gravity="center"
+        android:padding="10dp"
         android:inputType="text"
-        android:hint=""
+        android:hint="Nombre completo"
         android:background="@drawable/white_rounded"
         android:layout_width="match_parent"
         android:layout_marginRight="40dp"
@@ -102,9 +103,10 @@
         android:id="@+id/email"
         android:inputType="textEmailAddress"
         android:textStyle="bold"
-        android:textSize="24sp"
+        android:textSize="18sp"
+        android:padding="10dp"
         android:gravity="center"
-        android:hint=""
+        android:hint="Correo electronico"
         android:background="@drawable/white_rounded"
         android:layout_width="match_parent"
         android:layout_marginRight="40dp"
